--- a/index.html
+++ b/index.html
@@ -26,17 +26,15 @@
 </nav>
 
 <article>
-<p>Greetings!</p>
+<p>Greetings! I am an <a href="https://techlore.tech">Privacy Advocate</a>, Music enthusiast, and Warframe Player. I was Born 6 December 1983, (Age 38), and my name is Margaret Danielle Parker.</p>
 
-<p>Born 6 December 1983, Age 38.</p>
+<p>Most of my days consist of Warframe and music, my favorite musician is <a href="http://zoe-official.com/">Zoë Straub</a>, and here's a playlist of artist I tend to listen to daily - <a href="https://open.spotify.com/playlist/2S2VNiBjhzpFUOxNDADsFd?si=92RbxwsTSmSCpdr9M2LoMA">A Day In My Life</a>.</p>
 
-<p>My name is Margaret Danielle Parker.</p>
+<h2>Contact</h2>
+<p>You may send me anything at any time to <a href="https://matrix.to/#/@p.marg:matrix.org">matrix</a>. I usually respond as fast as possible. And there is <a href="mailto:Margaret.Parker@protonmail.com">Margaret.Parker@protonmail.com</a></p>
 
-<p>My days consist of music - <a href="https://open.spotify.com/playlist/2S2VNiBjhzpFUOxNDADsFd?si=92RbxwsTSmSCpdr9M2LoMA">A Day In My Life</a>.</p>
 
-<p>Favorite musician - <a href="http://zoe-official.com/">Zoë Straub</a>.</p> 
-
-<h2 id="Articles">Articles</h2>
+<h2 id="Articles">Top Sites</h2>
 <ul class="articles"><li><a href="https://www.privacytools.io/">Privacy Tools</a></li><li><a href="https://passwordsgenerator.net/">Secure Password Generator</a></li></article>
 
 
