--- a/index.html
+++ b/index.html
@@ -26,9 +26,11 @@
 </nav>
 
 <article>
+<h2>About Me</h2>
 <p>Greetings! I am an <a href="https://techlore.tech">Privacy Advocate</a>, Music enthusiast, and Warframe Player. I was Born 6 December 1983, (Age 38), and my name is Margaret Danielle Parker.</p>
 
 <p>Most of my days consist of Warframe and music, my favorite musician is <a href="http://zoe-official.com/">Zoë Straub</a>, and here's a playlist of artist I tend to listen to daily - <a href="https://open.spotify.com/playlist/2S2VNiBjhzpFUOxNDADsFd?si=92RbxwsTSmSCpdr9M2LoMA">A Day In My Life</a>.</p>
+
 
 <h2>Contact</h2>
 <p>You may send me anything at any time to <a href="https://matrix.to/#/@p.marg:matrix.org">matrix</a>. I usually respond as fast as possible. And there is <a href="mailto:Margaret.Parker@protonmail.com">Margaret.Parker@protonmail.com</a></p>
