--- a/index.html
+++ b/index.html
@@ -34,7 +34,7 @@
 
 
 <h2>Contact</h2>
-<p>You may send me anything at any time to <a href="https://matrix.to/#/@p.marg:matrix.org">matrix</a>. I usually respond as fast as possible. And there is <a href="mailto:Margaret.Parker@protonmail.com">Margaret.Parker@protonmail.com</a></p>
+<p>You may send me anything at any time to <a href="https://matrix.to/#/@p.marg:matrix.org">p.marg</a> at matrix. I usually respond as fast as possible. And there is <a href="mailto:Margaret.Parker@protonmail.com">Margaret.Parker@protonmail.com</a></p>
 
 
 <h2>Recommended Websites</h2>
