--- a/index.html
+++ b/index.html
@@ -28,15 +28,15 @@
 <hr>
 
 <h2>About Me</h2>
-<p>Greetings! I am an <a href="https://techlore.tech">Privacy Advocate</a>, <a href="http://zoe-official.com/">Music enthusiast</a>, and <a href="https://warframe.com">Warframe Player</a>. I was Born 6 December 1983, (Age 38), and my name is Margaret Danielle Parker.</p>
-
+<p>Greetings! I am an <a href="https://techlore.tech">Privacy Advocate</a>, <a href="http://zoe-official.com/">Music enthusiast</a>, and <a href="https://warframe.com">Warframe Player</a>.</p>
+<p>I was Born 6 December 1983, (Age 38), and my name is Margaret Danielle Parker.</p>
 <p>Most of my days consist of Warframe and music, my favorite musician is <a href="http://zoe-official.com/">Zoë Straub</a>, and here's a playlist of my favorite musician's - <a href="https://open.spotify.com/playlist/2S2VNiBjhzpFUOxNDADsFd?si=92RbxwsTSmSCpdr9M2LoMA">A Day In My Life</a>.</p>
 
-<article>
+
 <h2>Contact</h2>
 <p>You may send me anything at any time to <a href="https://matrix.to/#/@p.marg:matrix.org">p.marg</a> at matrix. I usually respond as fast as possible. And there is <a href="mailto:Margaret.Parker@protonmail.com">Margaret.Parker@protonmail.com</a></p>
 
-<article>
+
 <h2>Recommended Websites</h2>
 <ul class="articles"><li><a href="https://www.privacytools.io/">Privacy Tools</a></li><li><a href="https://passwordsgenerator.net/">Secure Password Generator</a></li></article>
 
