--- a/index.html
+++ b/index.html
@@ -29,7 +29,7 @@
 <hr>
 
 <h2>About Me</h2>
-<p>Greetings! I am an <a href="https://techlore.tech">Privacy Advocate</a>, and a <a href="http://zoe-official.com/">Music enthusiast.</p>
+<p>Greetings! I am an <a href="https://techlore.tech">Privacy Advocate</a>, and a <a href="http://zoe-official.com/">Music enthusiast.</a></p>
 <p>I was Born 6 December 1983, (Age 38), and my name is Margaret Danielle Parker.</p>
 <p>Most of my days consist of music, my favorite musician is <a href="http://zoe-official.com/">Zoë Straub</a>, and here's my daily playlist - <a href="https://open.spotify.com/playlist/2S2VNiBjhzpFUOxNDADsFd?si=92RbxwsTSmSCpdr9M2LoMA">A Day In My Life</a>.</p>
 
