--- a/index.html
+++ b/index.html
@@ -30,8 +30,8 @@
 
 <h2>About Me</h2>
 <p>Greetings! I am an <a href="https://techlore.tech">Privacy Advocate</a>, and a <a href="http://zoe-official.com/">Music enthusiast.</a></p>
-<p>I was Born 6 December 1983, (Age 38), and my name is Margaret Danielle Parker.</p>
-<p>My days consist of music, my favorite musician is <a href="http://zoe-official.com/">Zoë Straub</a>.</p>
+<p>I was Born 6 December 1983 (Age 38), and my name is Margaret Danielle Parker.</p>
+<p>My days consist of listening to music, and my favorite musician is <a href="http://zoe-official.com/">Zoë Straub</a>.</p>
 
 
 <h2>Contact</h2>
