Matrix Switched with Session

--- a/index.html
+++ b/index.html
@@ -35,7 +35,7 @@
 
 
 <h2>Contact</h2>
-<p>You may send me anything at any time to <a href="https://matrix.to/#/@p.marg:matrix.org">p.marg</a> at matrix. I usually respond as fast as possible.</p>
+<p>You may send me anything at any time to ¨05f5531ea980a0efee81889ec3f7302a197f7b4633dd2b8861f4dc008faccbea32¨ at <a href="https://getsession.org/">Session</a>. I usually respond as fast as possible.</p>
 <p>And there is <a href="mailto:Margaret.Parker@protonmail.com">Margaret.Parker@protonmail.com</a></p>
 
 
