--- a/index.html
+++ b/index.html
@@ -30,9 +30,10 @@
 
 <h2>About Me</h2>
 <p>Greetings! I am an <a href="https://techlore.tech">Privacy Advocate</a>, and a <a href="http://zoe-official.com/">Music enthusiast.</a></p>
-<p>I don't have Twitter, Facebook, Instagram, Snpachat, PixelFeed, or even a Google account.</p>
 <p>I was Born 6 December 1983 (Age 38), and my name is Margaret Danielle Parker.</p>
 <p>My days consist of listening to music, and my favorite musician is <a href="http://zoe-official.com/">Zoë Straub</a>.</p>
+<p>I don't have Twitter, Facebook, Instagram, Snpachat, PixelFeed, or even a Google account.</p>
+
 
 <h2>Contact</h2>
 <p>You may send me anything at any time to Margaret D. Parker at <a href="https://getsession.org/">Session</a>. I usually respond as fast as possible.</p>
@@ -41,7 +42,8 @@
 
 
 <h2>Recommended Websites</h2>
-<ul class="articles"><li><a href="https://www.privacytools.io/">Privacy Tools</a></li><li><a href="https://passwordsgenerator.net/">Secure Password Generator</a></li></article>
+<p><a href="https://www.privacytools.io/">Privacy Tools</a></p>
+<p><a href="https://passwordsgenerator.net/">Secure Password Generator</a></p>
 
 
 </body>
