--- a/index.html
+++ b/index.html
@@ -42,8 +42,8 @@
 
 
 <h2>Recommended Websites</h2>
-<p><a href="https://www.privacytools.io/">Privacy Tools</a></p>
-<p><a href="https://passwordsgenerator.net/">Secure Password Generator</a></p>
+<li><a href="https://www.privacytools.io/">Privacy Tools</a></li>
+<li><a href="https://passwordsgenerator.net/">Secure Password Generator</a></li>
 
 
 </body>
