Techlore recommended sites

--- a/index.html
+++ b/index.html
@@ -44,6 +44,8 @@
 <h2>Recommended Websites</h2>
 <li><a href="https://www.privacytools.io/">Privacy Tools</a></li>
 <li><a href="https://passwordsgenerator.net/">Secure Password Generator</a></li>
+<li><a href="https://techlore.tech/">Techlore spreading privacy & security to the masses</a></li>
+
 
 
 </body>
