--- a/index.html
+++ b/index.html
@@ -21,7 +21,8 @@
     <li><a href="mailto:Margaret.Parker@protonmail.com">contact</a></li>
     <li><a href="https://matrix.to/#/@p.marg:matrix.org">matrix</a></li>
     <li><a href="https://discord.gg/n9x2TEzvza">discord</a></li>
-	<li><a href="https://github.com/p-marg">github</a></li>
+	  <li><a href="https://github.com/p-marg">github</a></li>
+    <li><a href="https://steamcommunity.com/id/p-marg">steam</a></li>
   </ul>
 </div>
 </nav>
