--- a/index.html
+++ b/index.html
@@ -4,6 +4,8 @@
     <link rel="stylesheet" href="./Margaret_files/style.css">
     <link rel="shortcut icon" type="image/x-icon" href="./Margaret_files/favicon.png">
     <link href="./Margaret_files/css2" rel="stylesheet">
+    <script src="./Wolfgang&#39;s Blog_files/93866eaaa9.js.download" crossorigin="anonymous"></script><style media="all" id="fa-v4-font-face">
+    
     <title>Margaret D. Parker</title>
 </head>
 
