--- a/index.html
+++ b/index.html
@@ -1,11 +1,10 @@
-<html lang="en" data-theme="light"><head><meta http-equiv="Content-Type" content="text/html; charset=UTF-8"><head>
+<html lang="en"><script data-dapp-detection="">!function(){let e=!1;function n(){if(!e){const n=document.createElement("meta");n.name="dapp-detected",document.head.appendChild(n),e=!0}}if(window.hasOwnProperty("ethereum")){if(window.__disableDappDetectionInsertion=!0,void 0===window.ethereum)return;n()}else{var t=window.ethereum;Object.defineProperty(window,"ethereum",{configurable:!0,enumerable:!1,set:function(e){window.__disableDappDetectionInsertion||n(),t=e},get:function(){if(!window.__disableDappDetectionInsertion){const e=arguments.callee;e&&e.caller&&e.caller.toString&&-1!==e.caller.toString().indexOf("getOwnPropertyNames")||n()}return t}})}}();</script><head><meta http-equiv="Content-Type" content="text/html; charset=UTF-8">
+<head>
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
     <link rel="stylesheet" href="./Margaret_files/style.css">
     <link rel="shortcut icon" type="image/x-icon" href="./Margaret_files/favicon.png">
     <link href="./Margaret_files/css2" rel="stylesheet">
-    <script src="./Wolfgang&#39;s Blog_files/93866eaaa9.js.download" crossorigin="anonymous"></script><style media="all" id="fa-v4-font-face">
-    
     <title>Margaret D. Parker</title>
 </head>
 
@@ -19,7 +18,6 @@
 </div>
 <div class="nav-right">
  <ul>
-    <li style="padding: 9px"><a id="darkmodetoggle" class="fas fa-moon" onclick="switchTheme()" aria-hidden="true"></a></li>
     <li><a href="mailto:Margaret.Parker@protonmail.com">contact</a></li>
     <li><a href="https://matrix.to/#/@p.marg:matrix.org">matrix</a></li>
     <li><a href="https://discord.gg/n9x2TEzvza">discord</a></li>
