Socials I don't use
Some more site's I don't use are listed

--- a/index.html
+++ b/index.html
@@ -44,7 +44,7 @@
 <p>Greetings! I am an <a href="https://www.privacytools.io/">Privacy Advocate</a>, and a <a href="http://zoe-official.com/">Music enthusiast.</a></p>
 <p>I was Born 6 December 1983 (Age 37), and my name is Margaret Danielle Parker.</p>
 <p>My days consist of listening to music, and my favorite musician is <a href="http://zoe-official.com/">Zoë Straub</a>.</p>
-<p>I don't have Twitter, Facebook, Instagram, Snpachat, PixelFeed, or even a Google account.</p>
+<p>I don't use Twitter, Facebook, Instagram, Snpachat, Pinterest, Twitch, PixelFeed, or even a Google account.</p>
 
 
 <h2>Contact</h2>
