--- a/index.html
+++ b/index.html
@@ -55,7 +55,7 @@
 
 <h2>Recommended Websites</h2>
 <li><a href="https://techlore.tech/">Techlore</a></li>
-<li><a href="https://simplelogin.io/blog/">SimpleLogin</a></li>
+<li><a href="https://simplelogin.io/SimpleLogin</a></li>
 <li><a href="https://www.privacytools.io/">Privacy Tools</a></li>
 <li><a href="https://passwordsgenerator.net/">Secure Password Generator</a></li>
 
