--- a/index.html
+++ b/index.html
@@ -55,6 +55,14 @@
 
 <div class="separator row" style="margin-top: 3rem;"></div>
 
+<h2>Linux</h2>
+<p>I got a passion for <a href="https://www.paldo.org/">paldo linux</a></p>
+<p>paldo is a <a href="https://www.paldo.org/index-section-about-page-upkg.html">UpkgZ</a> driven GNU/Linux distribution.</p>
+<p>It's kind of a mix of a source and a binary distribution.</p>
+<p>Even though it builds packages like a source distribution it provides binary packages.</p>
+
+<div class="separator row" style="margin-top: 3rem;"></div>
+
 <h2>Recommended Websites</h2>
 <li><a href="https://techlore.tech/">Techlore</a></li>
 <li><a href="https://simplelogin.io/">SimpleLogin</a></li>
