--- a/index.html
+++ b/index.html
@@ -41,7 +41,7 @@
 
 
 <h2>About Me</h2>
-<p>Greetings! I am an <a href="https://www.privacytools.io/">Privacy Advocate</a>, and a <a href="http://zoe-official.com/">Music enthusiast.</a></p>
+<p>Greetings! I am an <a href="https://www.privacytools.io/">Privacy Advocate</a>, and a <a href="http://zoe-official.com/">Music enthusiast</a>.</p>
 <p>I was Born 6 December 1983 (Age 37), and my name is Margaret Danielle Parker.</p>
 <p>My days consist of listening to music, and my favorite musician is <a href="http://zoe-official.com/">Zoë Straub</a>.</p>
 <p>I don't use Twitter, Facebook, Instagram, Snpachat, Twitch, PixelFeed, or even a Google account.</p>
@@ -49,7 +49,7 @@
 <div class="separator row" style="margin-top: 3rem;"></div>
 
 <h2>Linux</h2>
-<p>I got a passion for <a href="https://www.paldo.org/">paldo linux</a></p>
+<p>I got a passion for <a href="https://www.paldo.org/">paldo linux</a>.</p>
 <p>paldo is a <a href="https://www.paldo.org/index-section-about-page-upkg.html">UpkgZ</a> driven GNU/Linux distribution.</p>
 <p>It's kind of a mix of a source and a binary distribution.</p>
 <p>Even though it builds packages like a source distribution it provides binary packages.</p>
