--- a/index.html
+++ b/index.html
@@ -50,7 +50,7 @@
 
 <h2>Linux</h2>
 <p>I got a passion for <a href="https://www.paldo.org/">paldo linux</a>.</p>
-<p>paldo is a <a href="https://www.paldo.org/index-section-about-page-upkg.html">UpkgZ</a> driven GNU/Linux distribution.</p>
+<p>paldo is a <a href="https://www.paldo.org/index-section-about-page-upkg.html">Upkg</a> driven GNU/Linux distribution.</p>
 <p>It's kind of a mix of a source and a binary distribution.</p>
 <p>Even though it builds packages like a source distribution it provides binary packages.</p>
 
