--- a/index.html
+++ b/index.html
@@ -64,6 +64,7 @@
 <div class="separator row" style="margin-top: 3rem;"></div>
 
 <h2>Recommended Websites</h2>
+<li><a href="https://www.paldo.org/">paldo</a></li>
 <li><a href="https://techlore.tech/">Techlore</a></li>
 <li><a href="https://simplelogin.io/">SimpleLogin</a></li>
 <li><a href="https://privacytools.io/">Privacy Tools</a></li>
