--- a/index.html
+++ b/index.html
@@ -30,10 +30,10 @@
 				<ul>
 					<li style="padding: 9px"><a id="darkmodetoggle" class="fas fa-moon" onclick="switchTheme()" aria-hidden="true"></a></li>
 					<li><a href="mailto:Margaret.Parker@protonmail.com">contact</a></li>
-                    <li><a href="https://matrix.to/#/@p.marg:matrix.org">matrix</a></li>
-                    <li><a href="https://discord.gg/n9x2TEzvza">discord</a></li>
-	                <li><a href="https://github.com/p-marg">github</a></li>
-                    <li><a href="https://steamcommunity.com/id/p-marg">steam</a></li>
+                    <li><a href="https://matrix.to/#/@p.marg:matrix.org" target="_blank">matrix</a></li>
+                    <li><a href="https://discord.gg/n9x2TEzvza" target="_blank">discord</a></li>
+	                <li><a href="https://github.com/p-marg" target="_blank">github</a></li>
+                    <li><a href="https://steamcommunity.com/id/p-marg" target="_blank">steam</a></li>
 				</ul>
 			</div>
 		</nav>
@@ -41,34 +41,34 @@
 
 
 <h2>About Me</h2>
-<p>Greetings! I am an <a href="https://www.privacytools.io/">Privacy Advocate</a>, and a <a href="http://zoe-official.com/">Music enthusiast</a>.</p>
+<p>Greetings! I am an <a href="https://www.privacytools.io/" target="_blank">Privacy Advocate</a>, and a <a href="http://zoe-official.com/" target="_blank">Music enthusiast</a>.</p>
 <p>I was Born 6 December 1983 (Age 37), and my name is Margaret Danielle Parker.</p>
-<p>My days consist of listening to music, and my favorite musician is <a href="http://zoe-official.com/">Zoë Straub</a>.</p>
+<p>My days consist of listening to music, and my favorite musician is <a href="http://zoe-official.com/" target="_blank">Zoë Straub</a>.</p>
 <p>I don't use Twitter, Facebook, Instagram, Snpachat, Twitch, PixelFeed, or even a Google account.</p>
 
 <div class="separator row" style="margin-top: 3rem;"></div>
 
 <h2>Linux</h2>
-<p>I got a passion for <a href="https://www.paldo.org/">paldo</a>.</p>
-<p>paldo is a <a href="https://www.paldo.org/index-section-about-page-upkg.html">Upkg</a> driven GNU/Linux distribution.</p>
+<p>I got a passion for <a href="https://www.paldo.org/ target="_blank">paldo</a>.</p>
+<p>paldo is a <a href="https://www.paldo.org/index-section-about-page-upkg.html" target="_blank">Upkg</a> driven GNU/Linux distribution.</p>
 <p>It's kind of a mix of a source and a binary distribution.</p>
 <p>Even though it builds packages like a source distribution it provides binary packages.</p>
 
 <div class="separator row" style="margin-top: 3rem;"></div>
 
 <h2>Contact</h2>
-<p>You may send me anything at any time to Margaret D. Parker at <a href="https://getsession.org/">Session</a>. I usually respond as fast as possible.</p>
+<p>You may send me anything at any time to Margaret D. Parker at <a href="https://getsession.org/" target="_blank">Session</a>. I usually respond as fast as possible.</p>
 <p>Session ID: 05f5531ea980a0efee81889ec3f7302a197f7b4633dd2b8861f4dc008faccbea32</p>
 <p>And there is <a href="mailto:Margaret.Parker@protonmail.com">Margaret.Parker@protonmail.com</a></p>
 
 <div class="separator row" style="margin-top: 3rem;"></div>
 
 <h2>Recommended Websites</h2>
-<li><a href="https://www.paldo.org/">paldo</a></li>
-<li><a href="https://techlore.tech/">Techlore</a></li>
-<li><a href="https://simplelogin.io/">SimpleLogin</a></li>
-<li><a href="https://privacytools.io/">Privacy Tools</a></li>
-<li><a href="https://passwordsgenerator.net/">Secure Password Generator</a></li>
+<li><a href="https://www.paldo.org/" target="_blank">paldo</a></li>
+<li><a href="https://techlore.tech/" target="_blank">Techlore</a></li>
+<li><a href="https://simplelogin.io/" target="_blank">SimpleLogin</a></li>
+<li><a href="https://privacytools.io/" target="_blank">Privacy Tools</a></li>
+<li><a href="https://passwordsgenerator.net/" target="_blank">Secure Password Generator</a></li>
 
 <script>
 // Get the theme toggle input
