--- a/index.html
+++ b/index.html
@@ -49,7 +49,7 @@
 <div class="separator row" style="margin-top: 3rem;"></div>
 
 <h2>Linux</h2>
-<p>I got a passion for <a href="https://www.paldo.org/ target="_blank">paldo</a>.</p>
+<p>I got a passion for <a href="https://www.paldo.org/" target="_blank">paldo</a>.</p>
 <p>paldo is a <a href="https://www.paldo.org/index-section-about-page-upkg.html" target="_blank">Upkg</a> driven GNU/Linux distribution.</p>
 <p>It's kind of a mix of a source and a binary distribution.</p>
 <p>Even though it builds packages like a source distribution it provides binary packages.</p>
