--- a/index.html
+++ b/index.html
@@ -63,12 +63,18 @@
 
 <div class="separator row" style="margin-top: 3rem;"></div>
 
-<h2>Recommended Websites</h2>
-<li><a href="https://www.paldo.org/" target="_blank">paldo</a></li>
-<li><a href="https://techlore.tech/" target="_blank">Techlore</a></li>
-<li><a href="https://simplelogin.io/" target="_blank">SimpleLogin</a></li>
-<li><a href="https://privacytools.io/" target="_blank">Privacy Tools</a></li>
-<li><a href="https://passwordsgenerator.net/" target="_blank">Secure Password Generator</a></li>
+<h2>Clear Links</h2>
+<li><a href="https://wiby.me/" target="_blank">Wiby</a></li>
+<li><a href="https://www.s-config.com/" target="_blank">S-Config</a></li>
+<li><a href="https://www.fi.muni.cz/~xjanu/index.html" target="_blank">Martin Janů</a></li>
+
+<div class="separator row" style="margin-top: 3rem;"></div>
+
+<h2>Onion Links</h2>
+<li><a href="http://xjfbpuj56rdazx4iolylxplbvyft2onuerjeimlcqwaihp3s6r4xebqd.onion/" target="_blank">S-Config</a></li>
+<li><a href="http://wivfwn64tm3uaeig.onion/aboutme.php" target="_blank">Daniel Kraft</a></li>
+<li><a href="http://mrarerealqoor2zr3ojupksngqokcsyrphjs5nvupj4wznxrejeyalid.onion/" target="_blank">Mister Are's News</a></li>
+
 
 <script>
 // Get the theme toggle input
