--- a/index.html
+++ b/index.html
@@ -66,7 +66,7 @@
 <h2>Clear Links</h2>
 <li><a href="https://wiby.me/" target="_blank">Wiby</a></li>
 <li><a href="https://www.s-config.com/" target="_blank">S-Config</a></li>
-<li><a href="https://www.fi.muni.cz/~xjanu/index.html" target="_blank">Martin Janů</a></li>
+<li><a href="https://www.fi.muni.cz/~xjanu/about-me.html" target="_blank">Martin Janů</a></li>
 
 <div class="separator row" style="margin-top: 3rem;"></div>
 
