--- a/index.html
+++ b/index.html
@@ -46,7 +46,9 @@
 <p>My days consist of listening to music, and my favorite musician is <a href="http://zoe-official.com/" target="_blank">Zoë Straub</a>.</p>
 <p>I don't use Twitter, Facebook, Instagram, Snpachat, Twitch, PixelFeed, or even a Google account.</p>
 
+
 <div class="separator row" style="margin-top: 3rem;"></div>
+
 
 <h2>Linux</h2>
 <p>I got a passion for <a href="https://www.paldo.org/" target="_blank">paldo</a>.</p>
@@ -54,26 +56,37 @@
 <p>It's kind of a mix of a source and a binary distribution.</p>
 <p>Even though it builds packages like a source distribution it provides binary packages.</p>
 
+
 <div class="separator row" style="margin-top: 3rem;"></div>
 
+
 <h2>Contact</h2>
-<p>You may send me anything at any time to Margaret D. Parker at <a href="https://getsession.org/" target="_blank">Session</a>. I usually respond as fast as possible.</p>
+<p>You may send me anything at any time to Margaret D. Parker at <a href="https://getsession.org/" target="_blank">Session</a>. I usually respond as fast as possible.
 <p>Session ID: 05f5531ea980a0efee81889ec3f7302a197f7b4633dd2b8861f4dc008faccbea32</p>
 <p>And there is <a href="mailto:Margaret.Parker@protonmail.com">Margaret.Parker@protonmail.com</a></p>
 
+
 <div class="separator row" style="margin-top: 3rem;"></div>
 
-<h2>Clear Links</h2>
+
+<details>
+<summary>Clear Links</summary>
 <li><a href="https://wiby.me/" target="_blank">Wiby</a></li>
 <li><a href="https://www.s-config.com/" target="_blank">S-Config</a></li>
 <li><a href="https://www.fi.muni.cz/~xjanu/about-me.html" target="_blank">Martin Janů</a></li>
+</details>
+
 
 <div class="separator row" style="margin-top: 3rem;"></div>
 
-<h2>Onion Links</h2>
+
+<details>
+<summary>Onion Links</summary>
 <li><a href="http://xjfbpuj56rdazx4iolylxplbvyft2onuerjeimlcqwaihp3s6r4xebqd.onion/" target="_blank">S-Config</a></li>
 <li><a href="http://wivfwn64tm3uaeig.onion/aboutme.php" target="_blank">Daniel Kraft</a></li>
 <li><a href="http://mrarerealqoor2zr3ojupksngqokcsyrphjs5nvupj4wznxrejeyalid.onion/" target="_blank">Mister Are's News</a></li>
+</details>
+
 
 
 <script>
