--- a/index.html
+++ b/index.html
@@ -69,19 +69,20 @@
 <div class="separator row" style="margin-top: 3rem;"></div>
 
 
+<h2>Favorite Websites</h2>
 <details>
-<summary>Clear Links</summary>
+<summary>Clearnet</summary>
 <li><a href="https://wiby.me/" target="_blank">Wiby</a></li>
 <li><a href="https://www.s-config.com/" target="_blank">S-Config</a></li>
 <li><a href="https://www.fi.muni.cz/~xjanu/about-me.html" target="_blank">Martin Janů</a></li>
 </details>
 
 
-<div class="separator row" style="margin-top: 3rem;"></div>
+<div class="separator row" style="margin-top: 1rem;"></div>
 
 
 <details>
-<summary>Onion Links</summary>
+<summary>Darknet</summary>
 <li><a href="http://xjfbpuj56rdazx4iolylxplbvyft2onuerjeimlcqwaihp3s6r4xebqd.onion/" target="_blank">S-Config</a></li>
 <li><a href="http://wivfwn64tm3uaeig.onion/aboutme.php" target="_blank">Daniel Kraft</a></li>
 <li><a href="http://mrarerealqoor2zr3ojupksngqokcsyrphjs5nvupj4wznxrejeyalid.onion/" target="_blank">Mister Are's News</a></li>
