--- a/index.html
+++ b/index.html
@@ -74,6 +74,7 @@
 <summary>Clearnet</summary>
 <li><a href="https://wiby.me/" target="_blank">Wiby</a></li>
 <li><a href="https://www.s-config.com/" target="_blank">S-Config</a></li>
+<li><a href="https://www.techlore.tech" target="_blank">Techlore</a></li>
 <li><a href="https://www.fi.muni.cz/~xjanu/about-me.html" target="_blank">Martin Janů</a></li>
 </details>
 
