--- a/index.html
+++ b/index.html
@@ -75,7 +75,6 @@
 <li><a href="https://wiby.me/" target="_blank">Wiby</a></li>
 <li><a href="https://www.s-config.com/" target="_blank">S-Config</a></li>
 <li><a href="https://www.techlore.tech" target="_blank">Techlore</a></li>
-<li><a href="https://www.fi.muni.cz/~xjanu/about-me.html" target="_blank">Martin Janů</a></li>
 </details>
 
 
@@ -91,6 +90,13 @@
 </details>
 
 
+<div class="separator row" style="margin-top: 1rem;"></div>
+
+
+<footer>
+	<p>Licensed under <a href="https://creativecommons.org/licenses/by-nc/4.0/">CC BY-NC 4.0</a><br>
+	Created with a slightly modified version of <a href="https://www.romanzolotarev.com/ssg.html">ssg</a> by Roman Zolotarev</p>
+</footer>
 
 <script>
 // Get the theme toggle input
