--- a/index.html
+++ b/index.html
@@ -94,8 +94,8 @@
 
 
 <footer>
-	<p>Licensed under <a href="https://creativecommons.org/licenses/by-nc/4.0/">CC BY-NC 4.0</a><br>
-	Created with a slightly modified version of <a href="https://www.romanzolotarev.com/ssg.html">ssg</a> by Roman Zolotarev</p>
+	<p>Licensed under <a href="https://creativecommons.org/licenses/by-nc/4.0/" target="_blank">CC BY-NC 4.0</a><br>
+	Created with a slightly modified version of <a href="https://www.romanzolotarev.com/ssg.html" target="_blank">ssg</a> by Roman Zolotarev</p>
 </footer>
 
 <script>
