--- a/index.html
+++ b/index.html
@@ -73,8 +73,9 @@
 <details>
 <summary>Clearnet</summary>
 <li><a href="https://wiby.me/" target="_blank">Wiby</a></li>
-<li><a href="https://www.s-config.com/" target="_blank">S-Config</a></li>
 <li><a href="https://www.techlore.tech" target="_blank">Techlore</a></li>
+<li><a href="http://zoe-official.com/" target="_blank">Zoë Straub</a></li>
+<li><a href="https://www.privacytools.io/" target="_blank">Privacy Tools</a></li>
 </details>
 
 
@@ -85,8 +86,6 @@
 <summary>Darknet</summary>
 <li><a href="http://phobosxilamwcg75xt22id7aywkzol6q6rfl2flipcqoc4e4ahima5id.onion/" target="_blank">Phobos</a></li>
 <li><a href="http://xjfbpuj56rdazx4iolylxplbvyft2onuerjeimlcqwaihp3s6r4xebqd.onion/" target="_blank">S-Config</a></li>
-<li><a href="http://wivfwn64tm3uaeig.onion/aboutme.php" target="_blank">Daniel Kraft</a></li>
-<li><a href="http://mrarerealqoor2zr3ojupksngqokcsyrphjs5nvupj4wznxrejeyalid.onion/" target="_blank">Mister Are's News</a></li>
 </details>
 
 
