Matrix Group Link

--- a/index.html
+++ b/index.html
@@ -30,7 +30,8 @@
 				<ul>
 					<li style="padding: 9px"><a id="darkmodetoggle" class="fas fa-moon" onclick="switchTheme()" aria-hidden="true"></a></li>
 					<li><a href="mailto:Margaret.Parker@protonmail.com">contact</a></li>
-                    <li><a href="https://matrix.to/#/@p.marg:matrix.org" target="_blank">matrix</a></li>
+                    <li><a href="https://matrix.to/#/@p.marg:matrix.org" target="_blank">matrix direct</a></li>
+					<li><a href="https://matrix.to/#/!oPSxZkImsNcTPWYapx:matrix.org?via=matrix.org" target="_blank">matrix group</a></li>
                     <li><a href="https://discord.gg/n9x2TEzvza" target="_blank">discord</a></li>
 	                <li><a href="https://github.com/p-marg" target="_blank">github</a></li>
                     <li><a href="https://steamcommunity.com/id/p-marg" target="_blank">steam</a></li>
