--- a/index.html
+++ b/index.html
@@ -31,7 +31,6 @@
 					<li style="padding: 9px"><a id="darkmodetoggle" class="fas fa-moon" onclick="switchTheme()" aria-hidden="true"></a></li>
 					<li><a href="mailto:Margaret.Parker@protonmail.com">contact</a></li>
                     <li><a href="https://matrix.to/#/@p.marg:matrix.org" target="_blank">matrix</a></li>
-                    <li><a href="https://discord.gg/n9x2TEzvza" target="_blank">discord</a></li>
 	                <li><a href="https://github.com/p-marg" target="_blank">github</a></li>
                     <li><a href="https://steamcommunity.com/id/p-marg" target="_blank">steam</a></li>
 				</ul>
@@ -44,7 +43,7 @@
 <p>Greetings! I am an <a href="https://www.privacytools.io/" target="_blank">Privacy Advocate</a>, and a <a href="http://zoe-official.com/" target="_blank">Music enthusiast</a>.</p>
 <p>I was Born 6 December 1983 (Age 37), and my name is Margaret Danielle Parker.</p>
 <p>My days consist of listening to music, and my favorite musician is <a href="http://zoe-official.com/" target="_blank">Zoë Straub</a>.</p>
-<p>I don't use Twitter, Facebook, Instagram, Snpachat, Twitch, PixelFeed, or even a Google account.</p>
+<p>I don't use Twitter, Facebook, Instagram, Snapchat, Twitch, PixelFeed, Discord, or even a Google account.</p>
 
 
 <div class="separator row" style="margin-top: 3rem;"></div>
