--- a/index.html
+++ b/index.html
@@ -43,7 +43,7 @@
 <p>Greetings! I am an <a href="https://www.privacytools.io/" target="_blank">Privacy Advocate</a>, and a <a href="http://zoe-official.com/" target="_blank">Music enthusiast</a>.</p>
 <p>I was Born 6 December 1983 (Age 37), and my name is Margaret Danielle Parker.</p>
 <p>My days consist of listening to music, and my favorite musician is <a href="http://zoe-official.com/" target="_blank">Zoë Straub</a>.</p>
-<p>I don't use Twitter, Facebook, Instagram, Snapchat, Twitch, PixelFeed, Discord, or even a Google account.</p>
+<p>I don't use social media like Twitter, Facebook, Instagram, Snapchat, Twitch, Discord, or even a Google account.</p>
 
 
 <div class="separator row" style="margin-top: 3rem;"></div>
