Renamed to blog

--- a/index.html
+++ b/index.html
@@ -30,7 +30,7 @@
 			<div class="nav-right">
 				<ul>
 					<li style="padding: 9px"><a id="darkmodetoggle" class="fas fa-moon" onclick="switchTheme()" aria-hidden="true"></a></li>
-					<li><a href="projects.html">blog</a></li>
+					<li><a href="blog.html">blog</a></li>
 					<li><a href="mailto:Margaret.Parker@protonmail.com">contact</a></li>
                     <li><a href="https://matrix.to/#/@p.marg:matrix.org" target="_blank">matrix</a></li>
 	                <li><a href="https://github.com/p-marg" target="_blank">github</a></li>
