--- a/blog.html
+++ b/blog.html
@@ -25,7 +25,7 @@
 		<nav class="menu">
 			<div class="nav-left">
 				<ul>
-					<li><a href="https://p-marg.github.io/index.html"><img class="logo" src="blog_files/favicon.png" alt=""><span class="sitename">Margaret D. Parker</span></a></li>
+					<li><a href="https://p-marg.github.io/"><img class="logo" src="blog_files/favicon.png" alt=""><span class="sitename">Margaret D. Parker</span></a></li>
 				</ul>
 			</div>
 			<div class="nav-right">
