--- a/blog.html
+++ b/blog.html
@@ -47,9 +47,9 @@
 
 <p><img src="blog_files/windows-11.jpg">  </p>
 
-<h2>Windows 11 ugh</h2>
+<h2>Windows 11</h2>
 
-<p>Me not liking Windows 11<P>
+<p>Windows 11 seems nice with its new translucent look, but me personally prefers the look of KDE Neon on my Manjaro Desktop :D<P>
 </article>
 
 <footer>
