--- a/blog.html
+++ b/blog.html
@@ -49,7 +49,7 @@
 
 <h2>Windows 11</h2>
 
-<p>Windows 11 seems nice with its new translucent look, but me personally prefers the look of KDE Neon on my Manjaro Desktop :D You can read up on windows 11 at The Verge <a href=" https://www.theverge.com/2021/6/15/22535123/microsoft-windows-11-leak-screenshots-start-menu" target="_blank">Windows 11 leaked design</a>.<P>
+<p>Windows 11 seems nice with its new translucent look, but me personally prefers the look of KDE Neon on my Manjaro Desktop :D You can read up on windows 11 at <a href=" https://www.theverge.com/2021/6/15/22535123/microsoft-windows-11-leak-screenshots-start-menu" target="_blank">The Verge</a>.<P>
 </article>
 
 <footer>
