--- a/blog.html
+++ b/blog.html
@@ -40,15 +40,15 @@
 			</div>
 		</nav>
 <article>
-<h1>Deleting Discord!</h1>
+<h1>Switching to Element!</h1>
 
 <p class="date">June 16, 2021</p>
 
 <p><img src="blog_files/elementio.png">  </p>
 
-<h2>Element is my switch</h2>
+<h2>Why element?</h2>
 
-<p>Why am I planing to delete my Discord account? I got privacy concerns when it comes to how discord handels deleted messages/accounts, and them becoming more open to advertisers. So where will I be available at? Well <a href="https://matrix.org/" target="_blank">Matrix</a> with the client <a href="https://element.io/" target="_blank">Element</a>. If <a href="https://element.io/" target="_blank">Element</a> is not your UI they got many other <a href="https://matrix.org/clients/" target="_blank">Matrix Clients</a> to try out.<P>
+<p>I got privacy concerns when it comes to how discord handels deleted messages/accounts, and them becoming more open to advertisers. So where will I be available at? Well <a href="https://matrix.org/" target="_blank">Matrix</a> with the client <a href="https://element.io/" target="_blank">Element</a>. If <a href="https://element.io/" target="_blank">Element</a> is not your UI they got many other <a href="https://matrix.org/clients/" target="_blank">Matrix Clients</a> to try out.<P>
 </article>
 
 
