--- a/blog.html
+++ b/blog.html
@@ -48,7 +48,7 @@
 
 <h2>Why element?</h2>
 
-<p>I got privacy concerns when it comes to how discord handels deleted messages/accounts, and them becoming more open to advertisers. So where will I be available at? Well <a href="https://matrix.org/" target="_blank">Matrix</a> with the client <a href="https://element.io/" target="_blank">Element</a>. If <a href="https://element.io/" target="_blank">Element</a> is not your UI they got many other <a href="https://matrix.org/clients/" target="_blank">Matrix Clients</a> to try out.<P>
+<p>I got privacy concerns when it comes to how discord handels deleted messages/accounts, and them becoming more open to advertisers. <a href="https://element.io/" target="_blank">Element</a> uses the <a href="https://matrix.org/" target="_blank">Matrix</a> protocol. If <a href="https://element.io/" target="_blank">Element</a> is not your UI they got many other <a href="https://matrix.org/clients/" target="_blank">Matrix Clients</a> to try out.<P>
 </article>
 
 
