--- a/blog.html
+++ b/blog.html
@@ -46,7 +46,7 @@
 
 <p><img src="blog_files/elementio.png">  </p>
 
-<h2>Why element?</h2>
+<h2>Why Element?</h2>
 
 <p>I got privacy concerns when it comes to how <a href="https://discord.com/privacy" target="_blank">Discord</a> handels deleted messages/accounts, and them becoming more open to advertisers. <a href="https://element.io/" target="_blank">Element</a> uses the <a href="https://matrix.org/" target="_blank">Matrix</a> protocol. If <a href="https://element.io/" target="_blank">Element</a> is not your UI there are many other <a href="https://matrix.org/clients/" target="_blank">Matrix Clients</a> to try out.<P>
 </article>
