--- a/blog.html
+++ b/blog.html
@@ -53,13 +53,13 @@
 
 
 		<article>
-<h1>Blog Testing</h1>
+<h1>Windows 11</h1>
 
 <p class="date">June 16, 2021</p>
 
 <p><img src="blog_files/windows-11.jpg">  </p>
 
-<h2>Windows 11</h2>
+<h2>New Translucent Look</h2>
 
 <p>Windows 11 seems nice with its new translucent look, but me personally prefers the look of KDE Neon on my Manjaro Desktop :D You can read up on windows 11 at <a href=" https://www.theverge.com/2021/6/15/22535123/microsoft-windows-11-leak-screenshots-start-menu" target="_blank">The Verge</a>.<P>
 </article>
