--- a/blog.html
+++ b/blog.html
@@ -65,8 +65,8 @@
 </article>
 
 <footer>
-	<p>Licensed under <a href="https://creativecommons.org/licenses/by-nc/4.0/">CC BY-NC 4.0</a><br>
-	Created with a <a href="https://notthebe.ee/src/ssg5">slightly modified</a> version of <a href="https://www.romanzolotarev.com/ssg.html">ssg</a> by Roman Zolotarev</p>
+	<p>Licensed under <a href="https://creativecommons.org/licenses/by-nc/4.0/" target="_blank">CC BY-NC 4.0</a><br>
+	Created with a slightly modified version of <a href="https://www.romanzolotarev.com/ssg.html" target="_blank">ssg</a> by Roman Zolotarev</p>
 </footer>
 <script>
 // Get the theme toggle input
