--- a/blog.html
+++ b/blog.html
@@ -40,6 +40,20 @@
 			</div>
 		</nav>
 <article>
+<h1>ZOË</h1>
+
+<p class="date">June 17, 2021</p>
+
+<p><img src="blog_files/Zoë.JPG">  </p>
+
+<h2>Rêverie</h2>
+
+<p>She is currently working on her next album. "<a href="https://www.globalrockstar.com//#/projects/reverie" target="_blank">Rêverie</a>" is its first single and introduces the style of her new productions: relaxed french acoustic music in the style of Carla Bruni, who reaches hundreds of millions of Spotify streams.</p>
+<p>ZOË, as an "old" hand in the business (she's only bloody 23 years young btw), is easy to place in the music business as she is already well-known in the industry. For this, our team will focus on activating her social network and place the song on every radio- and TV Station in Europe. Especially in Austria, Germany, France and Italy ZOË's songs are played on rotation and we are sure "Réverie will build on this success.</p>
+<p>Check out here site at <a href="https://zoe-official.com/" target="_blank">zoe-official.com</a></p>
+</article>		
+
+<article>
 <h1>Switching to Element!</h1>
 
 <p class="date">June 16, 2021</p>
