--- a/blog.html
+++ b/blog.html
@@ -49,7 +49,7 @@
 <h2>Rêverie</h2>
 
 <p>She is currently working on her next album. "<a href="https://www.globalrockstar.com//#/projects/reverie" target="_blank">Rêverie</a>" is its first single and introduces the style of her new productions: relaxed french acoustic music in the style of <a href="https://en.wikipedia.org/wiki/Carla_Bruni" target="_blank">Carla Bruni</a>, who reaches hundreds of millions of Spotify streams.</p>
-<p>ZOË, as an "old" hand in the business (she's only bloody 23 years young btw), is easy to place in the music business as she is already well-known in the industry. For this, our team will focus on activating her social network and place the song on every radio- and TV Station in Europe. Especially in Austria, Germany, France and Italy ZOË's songs are played on rotation and we are sure "Réverie will build on this success.</p>
+<p>ZOË, as an "old" hand in the business (she's only bloody 23 years young btw), is easy to place in the music business as she is already well-known in the industry. For this, <a href="https://www.globalrockstar.com/" target="_blank">Global Rockstar's</a> team will focus on activating her social network and place the song on every radio- and TV Station in Europe. Especially in Austria, Germany, France and Italy ZOË's songs are played on rotation and we are sure "Réverie will build on this success.</p>
 <p>Check out here site at <a href="https://zoe-official.com/" target="_blank">zoe-official.com</a></p>
 </article>		
 
