--- a/blog.html
+++ b/blog.html
@@ -40,6 +40,19 @@
 			</div>
 		</nav>
 <article>
+<h1>Moving to Linux</h1>
+
+<p class="date">July 4, 2021</p>
+
+<p><img src="blog_files/Fedora-Linux.png">  </p>
+
+<h2>Distro - Fedora Workstasion</h2>
+
+<p>Since my motherboard doesn't have the required TPM chip for Windows 11, I'll be using <a href="https://getfedora.org/" target="_blank">Fedora</a> full time by 2025. As I am having some problems getting Wifi drivers to work under <a href="https://paldo.org/" target="_blank">Paldo</a>, I settled for <a href="https://getfedora.org/" target="_blank">Fedora</a>.</p>
+</article>	
+		
+		
+<article>
 <h1>ZOË</h1>
 
 <p class="date">June 17, 2021</p>
