--- a/blog.html
+++ b/blog.html
@@ -48,9 +48,8 @@
 
 <h2>Distro - Fedora Workstasion</h2>
 
-<p>Since my motherboard doesn't have the required TPM chip for Windows 11, I'll be using <a href="https://getfedora.org/" target="_blank">Fedora</a> full time by 2025. As I am having some problems getting Wifi drivers to work under <a href="https://paldo.org/" target="_blank">Paldo</a>, I settled for <a href="https://getfedora.org/" target="_blank">Fedora</a>.</p>
-<p><a href="https://paldo.org/" target="_blank">Paldo</a> is my favorite Distro so when I get around to installing Wifi drivers I'll be using <a href="https://paldo.org/" target="_blank">Paldo</a> untill it dies.
-<p>A Samsung 970 Evo 500GB with 2 partitions, one for <a href="https://paldo.org/" target="_blank">Paldo</a> another for <a href="https://getfedora.org/" target="_blank">Fedora</a>.
+<p>Since my motherboard doesn't have the required TPM chip for Windows 11, I'll be using <a href="https://getfedora.org/" target="_blank">Fedora</a> full time by 2025. As I am having some problems getting Wifi drivers to work under <a href="https://paldo.org/" target="_blank">Paldo</a>, I settled for <a href="https://getfedora.org/" target="_blank">Fedora, <a href="https://paldo.org/" target="_blank">Paldo</a> is my favorite Distro so when I get around to installing Wifi drivers I'll be using <a href="https://paldo.org/" target="_blank">Paldo</a> untill it dies.</p>
+<p>i got a Samsung 970 Evo 500GB with 2 partitions, one for <a href="https://paldo.org/" target="_blank">Paldo</a> another for <a href="https://getfedora.org/" target="_blank">Fedora</a>.
 
 </article>	
 		
