pppppppppp not PPPPPPPP

--- a/blog.html
+++ b/blog.html
@@ -48,8 +48,8 @@
 
 <h2>Distro - Fedora Workstasion</h2>
 
-<p>Since my motherboard doesn't have the required TPM chip for Windows 11, I'll be using <a href="https://getfedora.org/" target="_blank">Fedora</a> full time by 2025. As I am having some problems getting Wifi drivers to work under <a href="https://paldo.org/" target="_blank">Paldo</a>, I settled for Fedora. Paldo is my favorite Distro so when I get around to installing Wifi drivers I'll be using Paldo untill it dies.</p>
-<p>i got a Samsung 970 Evo 500GB with 2 partitions, one for Paldo another for Fedora.
+<p>Since my motherboard doesn't have the required TPM chip for Windows 11, I'll be either using <a href="https://getfedora.org/" target="_blank">Fedora</a> or <a href="https://paldo.org/" target="_blank">paldo</a> full time by 2025. As I am having some problems getting Wifi drivers to work under paldo, I settled for Fedora. paldo is my favorite Distro so when I get around to installing Wifi drivers I'll be using paldo untill it dies.</p>
+<p>i got a Samsung 970 Evo 500GB with 2 partitions, one for paldo another for Fedora.
 
 </article>	
 		
