--- a/index.html
+++ b/index.html
@@ -76,6 +76,7 @@
 <li><a href="https://www.techlore.tech/" target="_blank">Techlore</a></li>
 <li><a href="http://zoe-official.com/" target="_blank">Zoë Straub</a></li>
 <li><a href="https://www.privacytools.io/" target="_blank">Privacy Tools</a></li>
+<li><a href="https://passwordsgenerator.net/" target="_blank">Secure Password Generator</a></li>
 </details>
 
 
@@ -84,7 +85,6 @@
 
 <details>
 <summary>Darknet</summary>
-<li><a href="http://phobosxilamwcg75xt22id7aywkzol6q6rfl2flipcqoc4e4ahima5id.onion/" target="_blank">Phobos</a></li>
 <li><a href="http://xjfbpuj56rdazx4iolylxplbvyft2onuerjeimlcqwaihp3s6r4xebqd.onion/" target="_blank">S-Config</a></li>
 </details>
 
