--- a/index.html
+++ b/index.html
@@ -76,7 +76,7 @@
 <li><a href="https://www.techlore.tech/" target="_blank">Techlore</a></li>
 <li><a href="http://zoe-official.com/" target="_blank">Zoë Straub</a></li>
 <li><a href="https://www.privacytools.io/" target="_blank">Privacy Tools</a></li>
-<li><a href="https://passwordsgenerator.net/" target="_blank">Secure Password Generator</a></li>
+<li><a href="https://passwordsgenerator.net/" target="_blank">Password Generator</a></li>
 </details>
 
 
