--- a/blog.html
+++ b/blog.html
@@ -48,8 +48,8 @@
 
 <h2>Distro - Fedora Workstasion</h2>
 
-<p>Since my motherboard doesn't have the required TPM chip for Windows 11, I will probably use <a href="https://getfedora.org/" target="_blank">Fedora</a> or <a href="https://paldo.org/" target="_blank">paldo</a> full time by 2025. Currently I am having some problems getting WiFi drivers to work under paldo, that's why I settled for Fedora. paldo is my favorite Distro so if I get around to installing Wifi drivers I'll be using paldo untill it dies.</p>
-<p>I got a Samsung 970 Evo 500GB with 2 partitions, one for paldo another for Fedora.
+<p>Since my motherboard doesn't have the required TPM chip for Windows 11, I will probably use <a href="https://getfedora.org/" target="_blank">Fedora</a> or <a href="https://paldo.org/" target="_blank">paldo</a> full time by 2025. Currently I am having some problems getting WiFi drivers to work under paldo, that's why I settled for Fedora. paldo is my favorite Distro so if I get around to installing Wifi drivers I'll be using paldo untill it dies. I got a Samsung 970 Evo 500GB with 2 partitions, one for paldo another for Fedora.</p>
+<p>Oh and happy July 4 Americans 🎉🎉</p>
 
 </article>	
 		
@@ -66,6 +66,7 @@
 <p>She is currently working on her next album. "<a href="https://www.globalrockstar.com/#/projects/reverie" target="_blank">Rêverie</a>" is its first single and introduces the style of her new productions: relaxed french acoustic music in the style of <a href="https://en.wikipedia.org/wiki/Carla_Bruni" target="_blank">Carla Bruni</a>, who reaches hundreds of millions of Spotify streams.</p>
 <p>Check out here site at <a href="https://zoe-official.com/" target="_blank">zoe-official.com</a></p>
 </article>		
+
 
 <article>
 <h1>Switching to Element!</h1>
