--- a/blog.html
+++ b/blog.html
@@ -48,7 +48,7 @@
 
 <h2>Discord is now strictly for contacting IRL Friends</h2>
 
-<p>Tried moving myself and Friends over to <a href="https://matrix.org/" target="_blank">Matrix</a> the past months, but Friends and <a href="https://goosemod.com/" target="_blank">GooseMod</a> keeps me at Discord. From this day onwards it will strictly be used to keep contact with my IRL friends. So where should I contact you? I'm still at Matrix, and I got <a href="https://getsession.org/" target="_blank">Session</a> and there's protonmail. Places to contact me are listed at my home page.</p>
+<p>Tried moving myself and Friends over to <a href="https://matrix.org/" target="_blank">Matrix</a> the past months, but Friends and <a href="https://goosemod.com/" target="_blank">GooseMod</a> keeps me at Discord. From this day onwards it will strictly be used to keep contact with my IRL friends. So where should you contact me? I'm at Matrix, and I got <a href="https://getsession.org/" target="_blank">Session</a> and there's protonmail. Places to contact me are listed at my home page.</p>
 
 </article>	
 
