--- a/index.html
+++ b/index.html
@@ -44,7 +44,7 @@
 <h2>About Me</h2>
 <p>Greetings! I am an <a href="https://www.privacytools.io/" target="_blank">Privacy Advocate</a>, and a <a href="http://zoe-official.com/" target="_blank">Music enthusiast</a>.</p>
 <p>My days consist of listening to music, and watching <a href="https://www.youtube.com/c/TheHatedOne" target="_blank">The Hated One</a>.</p>
-<p>I don't use social media like Twitter, Facebook, Instagram, Snapchat, Discord, Google, etc.</p>
+<p>I don't use social media like Twitter, Facebook, Instagram, Snapchat, Google, etc.</p>
 
 
 <div class="separator row" style="margin-top: 3rem;"></div>
