Linux blog makes sens

--- a/blog.html
+++ b/blog.html
@@ -62,7 +62,7 @@
 
 <h2>Distro - Fedora Workstasion</h2>
 
-<p>Since my motherboard doesn't have the required TPM chip for Windows 11, I will probably use <a href="https://getfedora.org/" target="_blank">Fedora</a> or <a href="https://paldo.org/" target="_blank">paldo</a> full time by 2025. Currently I am having some problems getting WiFi drivers to work under paldo, that's why I settled for Fedora. paldo is my favorite Distro so if I get around to installing Wifi drivers I'll be using paldo untill it dies. I got a Samsung 970 Evo 500GB with 2 partitions, one for paldo another for Fedora.</p>
+<p>Since my motherboard doesn't have the required TPM chip for Windows 11 (there are un-official work arounds, witch might get me at Microsofts watchlist), I will probably use <a href="https://paldo.org/" target="_blank">paldo</a> full time by 2025. Currently I am having some problems getting WiFi drivers for Boardcom to work under paldo, that's why I settled for Fedora. paldo is my favorite Distro so if I get around to installing Wifi drivers I'll be using paldo untill it dies. I got a Samsung 970 Evo 500GB with 2 partitions, one for paldo another for Fedora.</p>
 <p>Oh and happy July 4 Americans 🎉🎉</p>
 
 </article>	
