--- a/blog.html
+++ b/blog.html
@@ -56,7 +56,7 @@
 <article>
 <h1>Moving to Linux</h1>
 
-<p class="date">July 4, 2021</p>
+<p class="date">July 4, 2021 - Edited</p>
 
 <p><img src="blog_files/Fedora-Linux.png">  </p>
 
