--- a/blog.html
+++ b/blog.html
@@ -40,6 +40,21 @@
 			</div>
 		</nav>
 <article>
+<h1>Rêverie out now!</h1>
+
+<p class="date">July 7, 2021</p>
+
+<p><img src="blog_files/Reverie.png">  </p>
+
+<h2>Rêverie - ZOË</h2>
+
+<p>Loving the new style of relaxed french acoustic music in the style of <a href="https://en.wikipedia.org/wiki/Carla_Bruni" target="_blank">Carla Bruni</a> 💜💜</p>
+<iframe src="https://open.spotify.com/embed/track/77NLoJfCRqx1kb1WWTs9u4" width="100%" height="80" frameBorder="0" allowtransparency="true" allow="encrypted-media"></iframe>
+
+</article>	
+
+
+<article>
 <h1>Back to Discord</h1>
 
 <p class="date">July 6, 2021</p>
@@ -49,7 +64,6 @@
 <h2>Discord is now strictly for contacting IRL Friends</h2>
 
 <p>Tried moving myself and Friends over to <a href="https://matrix.org/" target="_blank">Matrix</a> the past months, but Friends and <a href="https://goosemod.com/" target="_blank">GooseMod</a> keeps me at Discord. From this day onwards it will strictly be used to keep contact with my IRL friends. So where should you contact me? I'm at Matrix, and I got <a href="https://getsession.org/" target="_blank">Session</a> and there's protonmail. Places to contact me are listed at my home page.</p>
-
 </article>	
 
 
@@ -64,7 +78,6 @@
 
 <p>Since my motherboard doesn't have the required TPM chip for Windows 11 (there are un-official work arounds, witch might get me at Microsofts watchlist), I will probably use <a href="https://paldo.org/" target="_blank">paldo</a> full time by 2025. Currently I am having some problems getting WiFi drivers for Boardcom to work under paldo, that's why I settled for Fedora. paldo is my favorite Distro so if I get around to installing Wifi drivers I'll be using paldo untill it dies. I got a Samsung 970 Evo 500GB with 2 partitions, one for paldo another for Fedora.</p>
 <p>Oh and happy July 4 Americans 🎉🎉</p>
-
 </article>	
 		
 		
