--- a/blog.html
+++ b/blog.html
@@ -69,15 +69,15 @@
 
 
 <article>
-<h1>Switching to Element!</h1>
+<h1>Switching to Quaternion!</h1>
 
-<p class="date">June 16, 2021</p>
+<p class="date">June 16, 2021 - Edited</p>
 
 <p><img src="blog_files/elementio.png">  </p>
 
-<h2>Why Element?</h2>
+<h2>Why Quaternion?</h2>
 
-<p>I got privacy concerns when it comes to how <a href="https://discord.com/privacy" target="_blank">Discord</a> handels deleted messages/accounts, and them becoming more open to advertisers. <a href="https://element.io/" target="_blank">Element</a> uses the <a href="https://matrix.org/" target="_blank">Matrix</a> protocol. If <a href="https://element.io/" target="_blank">Element</a> is not your UI there are many other <a href="https://matrix.org/clients/" target="_blank">Matrix Clients</a> to try out. Message me at <a href="https://matrix.to/#/@p.marg:matrix.org" target="_blank">p.marg</a>.<P>
+<p>I got privacy concerns when it comes to how <a href="https://discord.com/privacy" target="_blank">Discord</a> handels deleted messages/accounts, and them becoming more open to advertisers. <a href="https://matrix.org/docs/projects/client/quaternion" target="_blank">Quaternion</a> uses the <a href="https://matrix.org/" target="_blank">Matrix</a> protocol. If <a href="https://element.io/" target="_blank">Element</a> is not your UI there are many other <a href="https://matrix.org/clients/" target="_blank">Matrix Clients</a> to try out. Message me at <a href="https://matrix.to/#/@p.marg:matrix.org" target="_blank">p.marg</a>.<P>
 </article>
 
 
