--- a/index.html
+++ b/index.html
@@ -61,8 +61,8 @@
 
 
 <h2>Contact</h2>
-<p>You may send me anything at any time to Margaret D. Parker at <a href="https://getsession.org/" target="_blank">Session</a>. I usually respond as fast as possible.
-</p><p>Session ID: 05f5531ea980a0efee81889ec3f7302a197f7b4633dd2b8861f4dc008faccbea32</p>
+<p>You may send me anything at any time to Margaret D. Parker at <a href="https://getsession.org/" target="_blank">Session</a>. I usually respond as fast as possible.</p>
+<p>Session ID: 05f5531ea980a0efee81889ec3f7302a197f7b4633dd2b8861f4dc008faccbea32</p>
 <p>And there is <a href="mailto:Margaret.Parker@protonmail.com">Margaret.Parker@protonmail.com</a></p>
 
 
@@ -72,9 +72,9 @@
 <h2>Favorite Websites</h2>
 <details>
 <summary>Clearnet</summary>
-<li><a href="https://wiby.me/" target="_blank">Wiby</a></li>
-<li><a href="https://www.techlore.tech/" target="_blank">Techlore</a></li>
-<li><a href="http://zoe-official.com/" target="_blank">Zoë Straub</a></li>
+<li><a href="https://safing.io/" target="_blank">Safing</a></li>
+<li><a href="https://mullvad.net" target="_blank">Mullvad</a></li>
+<li><a href="https://techlore.tech" target="_blank">Techlore</a></li>
 <li><a href="https://www.privacytools.io/" target="_blank">Privacy Tools</a></li>
 <li><a href="https://passwordsgenerator.net/" target="_blank">Password Generator</a></li>
 </details>
@@ -85,6 +85,7 @@
 
 <details>
 <summary>Darknet</summary>
+<li><a href="http://o54hon2e2vj6c7m3aqqu6uyece65by3vgoxxhlqlsvkmacw6a7m7kiad.onion" target="_blank">Mullvad</a></li>
 <li><a href="http://xjfbpuj56rdazx4iolylxplbvyft2onuerjeimlcqwaihp3s6r4xebqd.onion/" target="_blank">S-Config</a></li>
 </details>
 
