--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
     <title>Margaret D. Parker</title>
     <link rel="stylesheet" type="text/css" href="Margaret_Files/style.css">
     <meta charset="utf-8">
-    <link rel="shortcut icon" type="image/x-icon" href="./Margaret_files/favicon.png">
+    <link rel="shortcut icon" type="image/x-icon" href="Margaret_files/favicon.png">
     <meta name="viewport" content="width=device-width, initial-scale=1">
 
 
