--- a/index.html
+++ b/index.html
@@ -1,7 +1,7 @@
 <html lang="en"><head>
 <meta http-equiv="content-type" content="text/html; charset=UTF-8">
     <title>Margaret D. Parker</title>
-    <link rel="stylesheet" type="text/css" href="./Margaret_Files/style.css">
+    <link rel="stylesheet" type="text/css" href="Margaret_Files/style.css">
     <meta charset="utf-8">
     <link rel="shortcut icon" type="image/x-icon" href="./Margaret_files/favicon.png">
     <meta name="viewport" content="width=device-width, initial-scale=1">
