--- a/index.html
+++ b/index.html
@@ -19,8 +19,8 @@
             </p>
 
             <h2>Contact</h2>
-            <p>I can be emailed at <a href="mailto:Margaret.Parker@protonmail.com">Margaret.Parker@protonmail.com</a>.</p>
-			<p>I am avalable at <a href="https://matrix.to/#/@p.marg:matrix.org" target="_blank">matrix</a>.</p>
+            <p>I can be emailed at <a href="mailto:Margaret.Parker@protonmail.com">Margaret.Parker@protonmail.com</a></p>
+			<p>I am avalable at <a href="https://matrix.to/#/@p.marg:matrix.org" target="_blank">matrix</a></p>
 
             <h2>Session ID</h2>
             <p><code class="cryptoaddr">05f5531ea980a0efee81889ec3f7302a197f7b4633dd2b8861f4dc008faccbea32</code></p>
