--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
             <h1>Margaret Danielle Parker</h1>
             <p>I'm Margaret. I am an Privacy Advocate, and a Music enthusiast.<p>
             <p>My days consist of listening to music, and watching <a href="https://www.youtube.com/c/TheHatedOne" target="_blank">The Hated One</a>. <br>
-            Aside from that have a nice day.
+            Aside from that, have a nice day.
             </p>
 
             <h2>Contact</h2>
