--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
         <div id="mainDiv">
             <h1>Margaret Danielle Parker</h1>
             <p>I'm Margaret. I am an Privacy Advocate, and a Music enthusiast.<p>
-            <p>My days consist of listening to music, and watching <a href="https://www.youtube.com/c/TheHatedOne" target="_blank">The Hated One</a>. <br>
+            <p>My days consist of listening to music, and watching The Hated One. <br>
             Aside from that, have a nice day.
             </p>
 
