--- a/index.html
+++ b/index.html
@@ -26,7 +26,7 @@
             <h2>Session ID</h2>
             <p><code class="cryptoaddr">05f5531ea980a0efee81889ec3f7302a197f7b4633dd2b8861f4dc008faccbea32</code></p>
 
-            <h2>Links</h2>
+            <h2>Articles</h2>
                 <a href="https://usermod.net/why-I-deleted-facebook-and-you-should-too/" target="_blank">Why I deleted my Facebook and why you should too</a>
         </div>
     </div>
