--- a/index.html
+++ b/index.html
@@ -28,7 +28,7 @@
 
             <h2>Articles</h2>
                 <a href="https://usermod.net/why-I-deleted-facebook-and-you-should-too/" target="_blank">Why I deleted my Facebook and why you should too</a> <br>
-				<a href="https://everyday-privacy.com/password-manager" target="_blank">Recommended Password managers</a>
+				<a href="https://everyday-privacy.com/password-manager" target="_blank">Recommended password managers</a>
         </div>
     </div>
 
