Brave, the false sensation of privacy

--- a/index.html
+++ b/index.html
@@ -28,8 +28,7 @@
 
             <h2>Articles</h2>
                 <a href="https://usermod.net/why-I-deleted-facebook-and-you-should-too/" target="_blank">Why I deleted my Facebook and why you should too</a> <br>
-				<a href="https://everyday-privacy.com/password-manager" target="_blank">Recommended password manager</a> <br>
-				<a href="https://mullvad.net/en/why-mullvad-vpn/" target="_blank">Recommended VPN to use</a>
+				<a href="https://ebin.city/~werwolf/posts/brave-is-shit/" target="_blank">Brave, the false sensation of privacy</a>
         </div>
     </div>
 
