--- a/index.html
+++ b/index.html
@@ -20,7 +20,7 @@
 
             <h2>Contact</h2>
             <p>I can be emailed at <a href="mailto:Margaret.Parker@protonmail.com">Margaret.Parker@protonmail.com</a> <br>
-			I am avalable at <a href="https://matrix.to/#/@p.marg:matrix.org" target="_blank">matrix</a>
+			I am avalable at <a href="https://getsession.org/" target="_blank">Session</a>
 			</p>
 
             <h2>Session ID</h2>
