Contact Email Updated
contact.31a22@slmail.me

--- a/index.html
+++ b/index.html
@@ -19,7 +19,7 @@
             </p>
 
             <h2>Contact</h2>
-            <p>I can be emailed at <a href="mailto:Margaret.Parker@protonmail.com">Margaret.Parker@protonmail.com</a> <br>
+            <p>I can be emailed at <a href="mailto:contact.31a22@slmail.me">contact.31a22@slmail.me</a> <br>
 			I am avalable at <a href="https://getsession.org/" target="_blank">Session</a>
 			</p>
 
