--- a/index.html
+++ b/index.html
@@ -13,8 +13,7 @@
     <div class="mainContainer">
         <div id="mainDiv">
             <h1>Margaret Danielle Parker</h1>
-            <p>I'm Margaret. I am an Privacy Advocate, and a Music enthusiast.<p>
-            <p>My days consist of listening to music, and watching Mental Outlaw. <br>
+            <p>I'm Margaret. I am an Privacy Advocate, and a Music enthusiast.<p> <br>
             Aside from that, have a nice day.
             </p>
 
