--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
     <div class="mainContainer">
         <div id="mainDiv">
             <h1>Margaret Danielle Parker</h1>
-            <p>I'm Margaret. I am an Privacy Advocate, and a Music enthusiast. <br>
+            <p>I'm Margaret. A Privacy Advocate, and a Music enthusiast. <br>
             Aside from that, have a nice day.
             </p>
 
