Session ID QR Code

--- a/index.html
+++ b/index.html
@@ -24,8 +24,9 @@
 
             <h2>Session ID</h2>
             <p><code class="cryptoaddr">05f5531ea980a0efee81889ec3f7302a197f7b4633dd2b8861f4dc008faccbea32</code></p>
-
-            <h2>Articles</h2>
+            <p> <img src="Margaret_files/QRCode.jpg"width="110" height="110"> </p>
+            
+			<h2>Articles</h2>
                 <a href="https://usermod.net/why-I-deleted-facebook-and-you-should-too/" target="_blank">Why I deleted my Facebook and why you should too</a> <br>
 				<a href="https://ebin.city/~werwolf/posts/brave-is-shit/" target="_blank">Brave, the false sensation of privacy</a> <br>
         </div>
