--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@
             </p>
 
             <h2>Contact</h2>
-            <p>I can be emailed at <a href="mailto:p-marg.88dnk@slmail.me">contact.31a22@slmail.me</a> <br>
+            <p>I can be emailed at <a href="mailto:p-marg.88dnk@slmail.me">p-marg.88dnk@slmail.me</a> <br>
 			I am avalable at <a href="https://getsession.org/" target="_blank">Session</a>
 			</p>
 
