--- a/index.html
+++ b/index.html
@@ -28,7 +28,8 @@
             
 			<h2>Articles</h2>
                 <a href="https://usermod.net/why-I-deleted-facebook-and-you-should-too/" target="_blank">Why I deleted my Facebook and why you should too</a> <br>
-				<a href="https://ebin.city/~werwolf/posts/brave-is-shit/" target="_blank">Brave, the false sensation of privacy</a> <br>
+				<a href="https://ebin.city/~werwolf/posts/brave-is-shit/" target="_blank"></a>Brave, the false sensation of privacy</a> <br>
+                <a href="https://odysee.com/@techlore:3/the-complete-beginner%E2%80%99s-guide-to:a?r=GW7A6VZ9PEXumZtpkjhHszaNqBYcERbe" target="_blank">The Complete Beginner’s Guide to Online Privacy 🕵</a>
         </div>
     </div>
 
